[package]
name = "ranoc"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The Compiler Library
libranoc = { path = "../libranoc" }
# CLIs
clap = "2.33.3"
# For Better Diagnostics Reporting
codespan-reporting = "0.11.0"