[package]
name = "ranoc"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"

[dependencies]
# the compiler library
libranoc = { path = "../libranoc" }
# CLIs
clap = "2.33.3"
# for better diagnostics reporting
codespan-reporting = "0.11.0"
# debug running
wasmer = "1.0.1"
anyhow = "1.0.38"